// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generated editor keymap snapshots (#641) > darwin: descriptors 1`] = `
[
  {
    "codeMirrorKey": "Cmd-f",
    "commandId": "editor.find.open",
    "handlerStatus": "callbackDirect",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Cmd-Alt-f",
    "commandId": "editor.find.replace.open",
    "handlerStatus": "callbackDirect",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Cmd-b",
    "commandId": "editor.markdown.bold",
    "handlerStatus": "registered",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Cmd-i",
    "commandId": "editor.markdown.italic",
    "handlerStatus": "registered",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Cmd-Shift-x",
    "commandId": "editor.markdown.strikethrough",
    "handlerStatus": "registered",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Cmd-k",
    "commandId": "editor.markdown.link",
    "handlerStatus": "registered",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Cmd-l",
    "commandId": "editor.markdown.heading",
    "handlerStatus": "registered",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Cmd-Shift-l",
    "commandId": "editor.markdown.insertHorizontalRule",
    "handlerStatus": "registered",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Cmd-Alt-q",
    "commandId": "editor.markdown.insertBlockquote",
    "handlerStatus": "registered",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Cmd-Shift-b",
    "commandId": "editor.markdown.insertCodeBlock",
    "handlerStatus": "registered",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Cmd-r",
    "commandId": "editor.markdown.insertRuby",
    "handlerStatus": "registered",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Cmd-.",
    "commandId": "editor.markdown.insertEmphasisMark",
    "handlerStatus": "registered",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Cmd-t",
    "commandId": "editor.markdown.insertTable",
    "handlerStatus": "registered",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Cmd-Shift-c",
    "commandId": "editor.markdown.toggleSyntaxChecker",
    "handlerStatus": "registered",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Cmd-g",
    "commandId": "glossary.entry.openFromSelection",
    "handlerStatus": "callbackDirect",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Alt-\`",
    "commandId": "glossary.completion.open",
    "handlerStatus": "callbackDirect",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && textDocument && !readOnly",
  },
  {
    "codeMirrorKey": "F2",
    "commandId": "editor.document.rename",
    "handlerStatus": "callbackDirect",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Alt-Shift-m",
    "commandId": "editor.tabCapture.toggle",
    "handlerStatus": "callbackDirect",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Cmd-Shift-i",
    "commandId": "editor.image.insert",
    "handlerStatus": "registered",
    "platform": "darwin",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
]
`;

exports[`generated editor keymap snapshots (#641) > linux: descriptors 1`] = `
[
  {
    "codeMirrorKey": "Ctrl-f",
    "commandId": "editor.find.open",
    "handlerStatus": "callbackDirect",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Ctrl-h",
    "commandId": "editor.find.replace.open",
    "handlerStatus": "callbackDirect",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Ctrl-b",
    "commandId": "editor.markdown.bold",
    "handlerStatus": "registered",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-i",
    "commandId": "editor.markdown.italic",
    "handlerStatus": "registered",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-Shift-x",
    "commandId": "editor.markdown.strikethrough",
    "handlerStatus": "registered",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-k",
    "commandId": "editor.markdown.link",
    "handlerStatus": "registered",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-l",
    "commandId": "editor.markdown.heading",
    "handlerStatus": "registered",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-Shift-l",
    "commandId": "editor.markdown.insertHorizontalRule",
    "handlerStatus": "registered",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-Shift-q",
    "commandId": "editor.markdown.insertBlockquote",
    "handlerStatus": "registered",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-Shift-b",
    "commandId": "editor.markdown.insertCodeBlock",
    "handlerStatus": "registered",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-r",
    "commandId": "editor.markdown.insertRuby",
    "handlerStatus": "registered",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-.",
    "commandId": "editor.markdown.insertEmphasisMark",
    "handlerStatus": "registered",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-t",
    "commandId": "editor.markdown.insertTable",
    "handlerStatus": "registered",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-Shift-c",
    "commandId": "editor.markdown.toggleSyntaxChecker",
    "handlerStatus": "registered",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-g",
    "commandId": "glossary.entry.openFromSelection",
    "handlerStatus": "callbackDirect",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Ctrl-Space",
    "commandId": "glossary.completion.open",
    "handlerStatus": "callbackDirect",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && textDocument && !readOnly",
  },
  {
    "codeMirrorKey": "F2",
    "commandId": "editor.document.rename",
    "handlerStatus": "callbackDirect",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Ctrl-m",
    "commandId": "editor.tabCapture.toggle",
    "handlerStatus": "callbackDirect",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Ctrl-Shift-i",
    "commandId": "editor.image.insert",
    "handlerStatus": "registered",
    "platform": "linux",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
]
`;

exports[`generated editor keymap snapshots (#641) > win32: descriptors 1`] = `
[
  {
    "codeMirrorKey": "Ctrl-f",
    "commandId": "editor.find.open",
    "handlerStatus": "callbackDirect",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Ctrl-h",
    "commandId": "editor.find.replace.open",
    "handlerStatus": "callbackDirect",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Ctrl-b",
    "commandId": "editor.markdown.bold",
    "handlerStatus": "registered",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-i",
    "commandId": "editor.markdown.italic",
    "handlerStatus": "registered",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-Shift-x",
    "commandId": "editor.markdown.strikethrough",
    "handlerStatus": "registered",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-k",
    "commandId": "editor.markdown.link",
    "handlerStatus": "registered",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-l",
    "commandId": "editor.markdown.heading",
    "handlerStatus": "registered",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-Shift-l",
    "commandId": "editor.markdown.insertHorizontalRule",
    "handlerStatus": "registered",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-Shift-q",
    "commandId": "editor.markdown.insertBlockquote",
    "handlerStatus": "registered",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-Shift-b",
    "commandId": "editor.markdown.insertCodeBlock",
    "handlerStatus": "registered",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-r",
    "commandId": "editor.markdown.insertRuby",
    "handlerStatus": "registered",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-.",
    "commandId": "editor.markdown.insertEmphasisMark",
    "handlerStatus": "registered",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-t",
    "commandId": "editor.markdown.insertTable",
    "handlerStatus": "registered",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-Shift-c",
    "commandId": "editor.markdown.toggleSyntaxChecker",
    "handlerStatus": "registered",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
  {
    "codeMirrorKey": "Ctrl-g",
    "commandId": "glossary.entry.openFromSelection",
    "handlerStatus": "callbackDirect",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Ctrl-Space",
    "commandId": "glossary.completion.open",
    "handlerStatus": "callbackDirect",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && textDocument && !readOnly",
  },
  {
    "codeMirrorKey": "F2",
    "commandId": "editor.document.rename",
    "handlerStatus": "callbackDirect",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Ctrl-m",
    "commandId": "editor.tabCapture.toggle",
    "handlerStatus": "callbackDirect",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus",
  },
  {
    "codeMirrorKey": "Ctrl-Shift-i",
    "commandId": "editor.image.insert",
    "handlerStatus": "registered",
    "platform": "win32",
    "readonly": false,
    "when": "editorFocus && markdownDocument && !readOnly",
  },
]
`;
